<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.licencep.myapplication.activity_home">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_text2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="" />

        <Button
            android:id="@+id/map"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_map" />

        <Button
            android:id="@+id/nav"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_nav" />

        <Button
            android:id="@+id/coucou"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_coucou" />

        <Button
            android:id="@+id/btn_recup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_recup" />

        <TextView
            android:id="@+id/tv_recup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView" />

        <Button
            android:id="@+id/Paris"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Paris" />
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>
